<resources>
    <string name="app_name">DisciteOmnes</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_groups">groups</string>
    <string name="title_studyplan">studyplan</string>
    <string name="title_tasks" />
    <string name="title_settings">settings</string>
    <string name="title_dash">dashboard</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="greeting_text">Willkommen zurück,</string>
    <string name="username_placeholder">$benutzername</string>

    <string name="box1_number">1</string>
    <string name="box1_text">Tasks today</string>

    <string name="box2_number">2</string>
    <string name="box2_text">Due soon</string>

    <string name="box3_number">3</string>
    <string name="box3_text">Extra box</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>