<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/home_icon"
        android:title="@string/title_dash" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/groups_icon"
        android:title="@string/title_groups" />

    <item
        android:id="@+id/navigation_studyplan"
        android:icon="@drawable/schedule_icon"
        android:title="@string/title_studyplan" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/tasks_icon"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/title_settings" />

</menu>